ahora si todo el lio de las clasificaiiones arreglada

--- a/templates/base/navbar1.html
+++ b/templates/base/navbar1.html
@@ -196,6 +196,7 @@
 
 
 
+
 <li class="menu-category">
 </li>
 
@@ -226,6 +227,11 @@
 
 
 
+      <li class="menu-category">
+          <a href="{% url 'products:list' %}?descuento=True" class="menu-title">
+              Descuentos
+          </a>
+      </li>
 
 
 
