--- a/templates/base/navbar1.html
+++ b/templates/base/navbar1.html
@@ -66,7 +66,7 @@
        {% if request.user.username %}
 
 
-              <a class="form-select" href="{% url 'pedidos_stripe:purchases_stripe' %}">Pedidos</a>
+              <a class="form-select" href="{% url 'pedidos_stripe:purchases_stripe' %}" style="font-size: 14px;color: gray;">PEDIDOS</a>
       {% endif %}
 
       {% if request.user.usuario.rol.nombre == 'Proveedor' %}
