category cell visualmente bien

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -524,8 +524,12 @@
   
   .header-top,
   .header-user-actions,
-  .desktop-navigation-menu { display: none; }
+   .desktop-navigation-menu { display: none; }
   
+  .category-cell{
+      display: block;
+    }
+
   .header-main {
     padding: 5px 0;
     border-bottom: 1px solid var(--cultured);
@@ -2692,6 +2696,10 @@
     }
   
     .desktop-navigation-menu { display: block; }
+
+    .category-cell{
+      display: none;
+    }
   
     .desktop-menu-category-list {
       position: relative;
