ÃÂÂLE PUSE  href a las clasificaciones padres

--- a/templates/usuario/update_user.html
+++ b/templates/usuario/update_user.html
@@ -88,6 +88,7 @@
           {% csrf_token %}
           <div>
               {{ form.as_p }}
+{#{{ form.password.help_text }}#}
           </div>
           <button type="submit" class="btn">Guardar Cambios</button>
       </form>
