--- a/templates/base/navbar1.html
+++ b/templates/base/navbar1.html
@@ -275,7 +275,7 @@
             {% if classification.productos_padre.count > 0 %}
             <li class="menu-category-cell">
               <a class="menu-title-cell" >
-                {{ classification.nombre }}
+                <a href="{% url 'products:list' %}?classification_id_padre={{ classification.id }}" > {{ classification.nombre }}</a>
                     </a>
                     {% if not classification.parent %}
                         {% if classification.hijos.all %}
