--- a/templates/base/navbar1.html
+++ b/templates/base/navbar1.html
@@ -214,7 +214,7 @@
 }
 
 .menu-category-cell:last-child {
-    margin-right: 0; /* Elimina el margen del último elemento */
+    margin-right: 10px; /* Elimina el margen del último elemento */
 }
 
 
@@ -263,8 +263,8 @@
 
 </style>
 
- 
-    <ul class="category-cell" style="margin-left: 20px; margin-bottom: 20px;margin-top: 20px;">
+  <div style="overflow-x: auto; white-space: nowrap; margin-bottom: 10px;">
+    <ul class="category-cell" style="margin-left: 20px;margin-right: 20px; margin-bottom: 20px;margin-top: 20px; ">
         <li class="menu-category-cell">
             <a href="{% url 'products:list' %}" class="menu-title-cell">
                 Todo
@@ -292,7 +292,7 @@
 
     </ul>
 
-
+  </div>
 
 
 {% if classifications %}
